fix(styles): additional bg hidden by default

--- a/src/app/theme/sass/_layout.scss
+++ b/src/app/theme/sass/_layout.scss
@@ -22,11 +22,7 @@ main {
   @include body-bg();
 
   .additional-bg {
-    position: fixed;
-    top: 0;
-    left: 0;
-    bottom: 0;
-    right: 0;
+    display: none;
     @include additional-bg();
   }
 }
